Remplacement de getFirst() par get(0)